Fixed layout issue in iOS.

--- a/styles/kiosk.css
+++ b/styles/kiosk.css
@@ -11,8 +11,9 @@ http://yuilibrary.com/license/
 html, body{
     font-family: 'Roboto Condensed', sans-serif;
     font-size: 1.1em;
+    width: 100%;
+    margin: 0%;
 }
-
 p{
     margin-bottom: 10px;
     line-height: 1em;
@@ -39,7 +40,6 @@ ul.copy-list li:before {
 }
 
 .header{
-    height: 100px;
     background-color: #053A4F;
 }
 
@@ -156,4 +156,17 @@ label span{
 .footer a{
     text-decoration: underline;
     color: #B7B7B8;
+}
+
+@media (max-width: 480px){
+    .pitch-logo-container{
+        color: white;
+        font-size: 2.1em;
+        padding-left: 20px;
+    }
+
+    .pledge-list{
+        display: none;
+    }
+
 }
